<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Uni-School</string>
    <string name="slogan">My future my hope</string>
    <string name="error_permission_required">Error Permission is Required</string>
    <string name="font_medium" translatable="false">fonts/Montserrat-Medium.ttf</string>
    <string name="font_semibold" translatable="false">fonts/Montserrat-SemiBold.ttf</string>
    <string name="font_bold" translatable="false">fonts/Montserrat-Bold.ttf</string>
    <string name="font_regular" translatable="false">fonts/Montserrat-Regular.ttf</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_dialog_title">Title</string>
    <string name="error_no_internet">No Internet</string>
    <string name="lbl_tap_to_retry">Retry</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_loading">Loading</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_share_app">Share App</string>
    <string name="lbl_about">About</string>
    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_settings">Settings</string>
    <string name="text_guest_user">Guest</string>
    <string name="text_todo">todo</string>
    <string name="lbl_my_order">order</string>
    <string name="lbl_admin">Admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="medicine_sub">Medicine Category</string>
    <string name="business_sub">Business Sub</string>
    <string name="agriculture_sub">Agriculture Sub</string>
    <string name="stem_sub">Stem Sub</string>
    <string name="Teveta_Sub">TEVETA Sub</string>
    <string name="STEM_faculty">Science, Technology, Engineering and Mathematics</string>
    <string name="STEM_faculty_info">Professionals usually
involved in planning, managing, scientific research, laboratory
and testing services.</string>
    <string name="demoHtml">demo.html</string>
    <string name="errorHtml">error.html</string>
    <string name="greyBoxPlaceHolderOnGoogleDrive">https://lh3.googleusercontent.com/74v87lo-Dv2VqB64NRFHJvrfK6r1AL87s-lg0lY1-SivLBv9ZTvdyTnBCidgBR4pkEU=w2400</string>
    <string name="loading_icon_on_google_drive">https://lh6.googleusercontent.com/WHMn7EcFw9BBcDHZw5BEIHnEZk9levHFtFr_exd7W1_DLlkR6HR5hlNuh8kv_dZINNI=w2400</string>
    <string name="testBtn">test Button</string>
    <string name="testBtnHtml">test.html</string>
    <string name="civilEngHtml">stemHtmlFiles/civilEng.html</string>
    <string name="mechanicalEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/mechanicalEng.html</string>
    <string name="aeronauticalEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/AeronauticalEng.html</string>
    <string name="chemicalEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ChemicalEng.html</string>
    <string name="electricalEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ElectricalAndElectronicsEng.html</string>
    <string name="electroEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ElectromechanicalEng.html</string>
    <string name="environmentalEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/EnvironmentalEng.html</string>
    <string name="geologyEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/GeologyGeologicalEng.html</string>
    <string name="geomaticsEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/GeomaticsEng.html</string>
    <string name="geotechnicalEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/GeotechnicalandGeoEnvironmentalEng.html</string>
    <string name="mechatronicsEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/MechatronicsEng.html</string>
    <string name="metallurgicalEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/MetallurgicalEngineering.html</string>
    <string name="mininEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/MiningEng.html</string>
    <string name="railwayEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/RailwayEng.html</string>
    <string name="telecommunicationEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/TelecommunicationsEng.html</string>
    <string name="computerScienceHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/computerScienceHtml.html</string>
    <string name="computerEngHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/computerEngHtml.html</string>
    <string name="ActurialScienceHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ActurialScience.html</string>
    <string name="ComputerInformationManagementSystemHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ComputerInformationManagementSystem.html</string>
    <string name="computerSystemsAnalysisHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/computerSystemsAnalysis.html</string>
    <string name="ComputerSystemsNetworkingAndTelecommunicationsHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ComputerSystemsNetworkingAndTelecommunications.html</string>
    <string name="CyberSecurityHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/CyberSecurity.html</string>
    <string name="informaticsHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/informatics.html</string>
    <string name="InformationScienceHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/InformationScience.html</string>
    <string name="InformationTechnologyHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/InformationTechnology.html</string>
    <string name="RoboticsHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/Robotics.html</string>
    <string name="PAndAPhysicsHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/PAndAPhysics.html</string>
    <string name="PAndAChemistyHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/PAndAChemisty.html</string>
    <string name="BiologyAndBiologicalSciencesHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/BiologyAndBiologicalSciences.html</string>
    <string name="microbiologyAndImuneHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/microbiologyAndImune.html</string>
    <string name="geneticsstemHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/genetics.html</string>
    <string name="mathematicsAndStatisticsHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/mathematicsAndStatistics.html</string>
    <string name="ArchitecturalEngineeringTechnologyTechnicianHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ArchitecturalEngineeringTechnologyTechnician.html</string>
    <string name="CivilEngineeringTechnologyTechnicianHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/CivilEngineeringTechnologyTechnician.html</string>
    <string name="ConstructionEngineeringTechnologiesConstructionEngineeringTechnologyTechnicianHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ ConstructionEngineeringTechnologiesConstructionEngineeringTechnologyTechnician.html</string>
    <string name="DraftingDesignEngineeringTechnologiesTechniciansHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/DraftingDesignEngineeringTechnologiesTechnicians.html</string>
    <string name="IndustrialProductionTechnologiesTechniciansChemicalEngineeringHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/ IndustrialProductionTechnologiesTechniciansChemicalEngineering.html</string>
    <string name="VehicleMaintenanceandRepairTechnologiesHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/VehicleMaintenanceandRepairTechnologies.html</string>
    <string name="PhysicalScienceTechnologiesTechniciansScienceTechnologiesTechniciansGeneralHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/PhysicalScienceTechnologiesTechniciansScienceTechnologiesTechniciansGeneral.html</string>
    <string name="MechanicAndRepairTechnologiesTechniciansElectricalElectronicMaintenanceandRepairTechnologyHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/MechanicAndRepairTechnologiesTechniciansElectricalElectronicMaintenanceandRepairTechnology.html</string>
    <string name="PrecisionMetalWorkingComputerHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/PrecisionMetalWorkingComputer.html</string>
    <string name="PrecisionProductionOfBoilerMakingBoilermakerHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/PrecisionProductionOfBoilerMakingBoilermakerHtml.html</string>
    <string name="MetalFabricatorHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/MetalFabricator.html</string>
    <string name="PrecisionProductionTradesWoodworkingHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/PrecisionProductionTradesWoodworking.html</string>
    <string name="FireProtectionHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/Fire Protection.html</string>
    <string name="TransportationAndMaterialsMovingHtml" tools:ignore="ExtraTranslation">stemHtmlFiles/TransportationAndMaterialsMoving.html</string>
    <string name="AGRICULTURALPRODUCTIONOPERATIONS">AgricultureBuiltEnvironment/Agriculture/AGRICULTURALPRODUCTIONOPERATIONS.html</string>
    <string name="AGRICULTURALPUBLICSERVICES">AgricultureBuiltEnvironment/Agriculture/AGRICULTURALPUBLICSERVICES.html</string>
    <string name="AGRICULTUREBUSINESSANDMANAGEMENT">AgricultureBuiltEnvironment/Agriculture/AGRICULTUREBUSINESSANDMANAGEMENT.html</string>
    <string name="AGRICULTUREMECHANIZATION">AgricultureBuiltEnvironment/Agriculture/AGRICULTUREMECHANIZATION.html</string>
    <string name="AGRICUTURALSUPPORTSERVICESANDTECHNICIANS">AgricultureBuiltEnvironment/Agriculture/AGRICUTURALSUPPORTSERVICESANDTECHNICIANS.html</string>
    <string name="ANIMALSCIENCE">AgricultureBuiltEnvironment/Agriculture/ANIMALSCIENCE.html</string>
    <string name="APPLIEDHORTICULTUREHORTICULTURALBUSINESSSERVICES">AgricultureBuiltEnvironment/Agriculture/APPLIEDHORTICULTUREHORTICULTURALBUSINESSSERVICES.html</string>
    <string name="FOODSCIENCEANDTECHNOLOGY">AgricultureBuiltEnvironment/Agriculture/FOODSCIENCEANDTECHNOLOGY.html</string>
    <string name="PLANTSCIENCES">AgricultureBuiltEnvironment/Agriculture/PLANTSCIENCES.html</string>
    <string name="SOILSCIENCES">AgricultureBuiltEnvironment/Agriculture/SOILSCIENCES.html</string>
    <string name="AGRICULTUREEXTENSION">AgricultureBuiltEnvironment/Agriculture/AGRICULTUREEXTENSION.html</string>
    <string name="AGRICULTURECONOMICS">AgricultureBuiltEnvironment/Agriculture/AGRICULTURRALECONOMICS.html</string>
    <string name="ARCHITECTURE">AgricultureBuiltEnvironment/BuiltEnviroment/ARCHITECTURE.html</string>
    <string name="CONSTRUCTIONMANAGEMENTANDECONOMICS">AgricultureBuiltEnvironment/BuiltEnviroment/CONSTRUCTIONMANAGEMENTANDECONOMICS.html</string>
    <string name="REALESTATE">AgricultureBuiltEnvironment/BuiltEnviroment/REALESTATE.html</string>
    <string name="REGIONALANDURBANPLANNING">AgricultureBuiltEnvironment/BuiltEnviroment/REGIONALANDURBANPLANNING.html</string>
    <string name="FishingandFisheriesSciencesandManagement">AgricultureBuiltEnvironment/NATURALRESOURCES/FishingandFisheriesSciencesandManagement.html</string>
    <string name="FORESTRY">AgricultureBuiltEnvironment/NATURALRESOURCES/FORESTRY.html</string>
    <string name="NATURAlRESOURCESCONSERVATIONANDRESEARCH">AgricultureBuiltEnvironment/NATURALRESOURCES/NATURAlRESOURCESCONSERVATIONANDRESEARCH.html</string>
    <string name="NATURALRESOURCESMANAGEMENTANDPOLICY">AgricultureBuiltEnvironment/NATURALRESOURCES/NATURALRESOURCESMANAGEMENTANDPOLICY.html</string>
    <string name="WILDLIFEANDWILDLANDSSCIENCEMANAGEMENT">AgricultureBuiltEnvironment/NATURALRESOURCES/WILDLIFEANDWILDLANDSSCIENCEMANAGEMENT.html</string>
    <string name="app_owner">By Rogic Kachanta</string>
    <string name="developed_by">Developed By Amos Banda and Ren Technology</string>
</resources>