<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCloseDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_standard"
                android:contentDescription="@string/text_todo"
                android:padding="@dimen/spacing_control"
                android:src="@drawable/ic_close_black" />

            <RelativeLayout
                android:layout_width="@dimen/sidebar_img_height"
                android:layout_height="@dimen/sidebar_img_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_standard_new"
                android:layout_marginBottom="@dimen/spacing_large"
                android:background="@drawable/bg_logo"
                android:gravity="center">

                <ImageView
                    android:id="@+id/ivAppLogo"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivAppLogo"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textAppearance="@style/FontBold"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:id="@+id/tvVersionCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvAppName"
                    android:layout_centerHorizontal="true"
                    android:letterSpacing="0.2"
                    android:text="v 1.0.0"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/font_size_nano" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xmedium"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/stroke_width"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/spacing_standard"
                    android:background="@color/view_color" />

                <TextView
                    android:id="@+id/tvSettings"
                    style="@style/SidebarLabel.SidebarOption"
                    android:gravity="center_vertical"
                    android:text="@string/lbl_settings"
                    app:drawableStartCompat="@drawable/ic_settings" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/stroke_width"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/spacing_standard_new"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/spacing_standard"
                    android:background="@color/view_color" />

                <TextView
                    android:id="@+id/tvFaq"
                    style="@style/SidebarLabel.SidebarOption"
                    android:paddingStart="@dimen/_46sdp"
                    android:text="@string/lbl_faq"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvHelp"
                    style="@style/SidebarLabel.SidebarOption"
                    android:paddingStart="@dimen/_46sdp"
                    android:text="@string/lbl_help"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvContactus"
                    style="@style/SidebarLabel.SidebarOption"
                    android:paddingStart="@dimen/_46sdp"
                    android:text="@string/lbl_contact_us" />

                <TextView
                    android:id="@+id/tvAbout"
                    style="@style/SidebarLabel.SidebarOption"
                    android:paddingStart="@dimen/_46sdp"
                    android:text="@string/lbl_about" />

                <TextView
                    android:id="@+id/tvRateUs"
                    style="@style/SidebarLabel.SidebarOption"
                    android:paddingStart="@dimen/_46sdp"
                    android:text="@string/lbl_rate_us"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvShareApp"
                    style="@style/SidebarLabel.SidebarOption"
                    android:paddingStart="@dimen/_46sdp"
                    android:text="@string/lbl_share_app" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>